<resources>
    <string name="app_name">NYTimes</string>
    <string name="action_settings">Settings</string>
    <string name="query">Enter search query</string>
    <string name="search">search</string>
    <string name="beginDate">Begin Date:</string>
    <string name="sortOrder">Sort Order:</string>
    <string name="newsDesk">News desk:</string>
    <string name="arts">Arts</string>
    <string name="fashion">Fashion and Style</string>
    <string name="sports">Sports</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
