<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="40dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/ivBackground"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="?attr/colorAccent"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:background="?attr/colorAccent"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beginDate"
        android:id="@+id/tvBeginDate"
        android:layout_below="@id/tvTitle"
        android:textIsSelectable="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etBeginDate"
        android:minWidth="300dp"
        android:layout_toRightOf="@id/tvBeginDate"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:editable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sortOrder"
        android:id="@+id/tvSortOrder"
        android:layout_below="@id/tvBeginDate"
        android:textIsSelectable="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignTop="@+id/tvSortOrder"
        android:layout_alignLeft="@+id/etBeginDate"
        android:layout_alignStart="@+id/etBeginDate"
        android:entries="@array/sort_order_array" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newsDesk"
        android:id="@+id/tvNewsDesk"
        android:layout_below="@id/tvSortOrder"
        android:textIsSelectable="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold" />

    <CheckBox android:id="@+id/cbArts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arts"
        android:layout_toRightOf="@id/tvNewsDesk"
        android:layout_below="@id/spinner"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp" />

    <CheckBox android:id="@+id/cbFashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fashion"
        android:layout_toRightOf="@id/tvNewsDesk"
        android:layout_below="@id/cbArts"
        android:layout_marginLeft="20dp" />

    <CheckBox android:id="@+id/cbsports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sports"
        android:layout_toRightOf="@id/tvNewsDesk"
        android:layout_below="@id/cbFashion"
        android:layout_marginLeft="20dp" />

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/btnOK"
        android:layout_below="@+id/cbsports"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:textColor="?attr/colorAccent" />

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/btnCancel"
        android:layout_alignTop="@+id/btnOK"
        android:layout_toRightOf="@+id/btnOK"
        android:layout_toEndOf="@+id/btnOK"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="40dp"
        android:background="@android:color/transparent"
        android:textColor="?attr/colorAccent" />

</RelativeLayout>